tests/algorithms/x/Java/sorts/quick_sort.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden971_quick_sort1205973795/001/Main.java:20: error: method concat in class Main cannot be applied to given types;
        return concat(concat(quick_sort(((int[])(lesser))), new int[]{pivot}), quick_sort(((int[])(greater))));
                      ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
1 error
